--- a/ConsoleApplications/Claims_Console/Claims_Console.csproj
+++ b/ConsoleApplications/Claims_Console/Claims_Console.csproj
@@ -50,5 +50,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Claims\Claims.csproj">
+      <Project>{B41205D0-4D8F-4B77-828E-5D33CC1E5789}</Project>
+      <Name>Claims</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
